YAML config